# web_course_hw

./: catalogue.html  category.html  contacts.html  main.py  main_page.html  pyproject.toml
src/: main_page.html
